<resources>
    <string name="app_name">Mobile-NFC-Handler</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main_menu_activity">Main_menu_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="returnButton">Return</string>
    <string name="ShowCardButton">Show Card</string>
    <string name="AddCardButton">Add Card</string>
    <string name="Logout" />
    <string name="message_write_tag">message_write_tag</string>
    <string name="hint_message">hint_message</string>
    <string name="message_write_progress" />
    <string name="message_write_success" />
    <string name="message_write_error" />
    <string name="Register">register_text</string>
    <string name="Login">login_text</string>
    <string name="message_read_tag">message_read_tag</string>
    <string name="message_tap_tag">message_tap_tag</string>
    <string name="message_tag_detected">NFC Tag Detected !</string>
    <string name="Login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="WriteToTag">Write_To_Tag</string>
    <string name="Hint_Message">Hint Message</string>
    <string name="Write_To_Tag">Write To NFC Tag</string>
    <string name="Forgotten_Password">Forgot Password?</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Retrive_Password">Retrive Password</string>
    <string name="Test_button">Test</string>
    <string name="Show_Active_Cards">Display Active Cards</string>
    <string name="Register_Text">Register</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>